# ShockTubeEntropy

./: .gitignore  CMakeLists.txt
backend/: CMakeLists.txt
backend/backend/: CMakeLists.txt
backend/backend/include/: solver.hpp
backend/backend/src/: main.cpp  solver_test.cpp
backend/frontend/src/: App.jsx
backend/include/: solver.hpp
backend/src/: main.cpp  montecarlo_test.cpp  solver.cpp  toro_test.cpp
frontend/src/: App.jsx
